[package]
name = "xgboost-bib"
version = "0.1.0"
links = "xgboost"
build = "build.rs"
license = "MIT"
repository = "https://github.com/MarWeUMR/xgboost-bib"
description = "Native bindings to the xgboost library"
readme = "README.md"

[dependencies]
libc = "*"

[build-dependencies]
bindgen = "*"
cmake = "*"

[lib]
doctest = false # important because docstring tests fail with bindgen!
